# handLanguageTranslation

./: .gitignore  README.md  analyze_loss.ps1  analyze_loss.py  ctc_loss_example.py  detailed_loss_analysis.ps1  docker-compose.yml  full_loss_analysis.ps1  quick_loss_analysis.bat  simple_train_val_analysis.ps1  temp_losses.txt  train_val_loss_analysis.ps1  visualize_losses.py
ContinuousSignLanguage/: a.py
ContinuousSignLanguage/CNN_BiLSTM/: ATTENTION_GUIDE.md  Makefile  README.md  README_attention_visualization.md  README_confidence_visualization.md  README_confusion_matrix.md  README_multilayer_feature_visualization.md  README_visualization_analysis.md  example_multiscale_usage.py  multiscale_config.py  pyproject.toml
ContinuousSignLanguage/CNN_BiLSTM/continuous_sign_language/: __init__.py  config.py  dataset.py  features.py  init_log.py  plots.py
ContinuousSignLanguage/CNN_BiLSTM/continuous_sign_language/modeling/: change_model_ios.py  config.py  functions.py  middle_dataset_relation.py  music.py  performance_monitor.py  phoenx.py  predict.py  python_wer_evaluation.py  train.py  wer_calculation.py
ContinuousSignLanguage/CNN_BiLSTM/models/: BiLSTM.py  Transformer.py  TransformerLayer.py  cnn_bilstm_model.py  ctc_loss_example.py  decode.py  one_dcnn.py
ContinuousSignLanguage/CNN_BiLSTM/reports/reviews/: 20250709_experiment_review.md  20250709_experiment_review_detailed.md
ContinuousSignLanguage/cnn_transformer/: Makefile  README.md  pyproject.toml
ContinuousSignLanguage/cnn_transformer/continuous_sign_language_cnn_transformer/: __init__.py  config.py  dataset.py  features.py  plots.py
ContinuousSignLanguage/cnn_transformer/continuous_sign_language_cnn_transformer/modeling/: config.py  one_test.py  predict.py  train.py  train_functions.py
ContinuousSignLanguage/cnn_transformer/continuous_sign_language_cnn_transformer/modeling/one_test/: chatgpt.py  config.py  functions.py  get_skelton.py  mediapipe_relation.py  requirements.txt  test.py
ContinuousSignLanguage/cnn_transformer/models/: cnn_model.py  cnn_transformer.py  spatial_feature_function.py  transformer_decoder.py  transformer_encoer.py
ContinuousSignLanguage/cnn_transformer_encoder/: Makefile  README.md  pyproject.toml
(+111 files in other folders)
