[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "continuous_sign_language"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Jun Shibata" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["continuous_sign_language"]
include = ["pyproject.toml", "continuous_sign_language/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["continuous_sign_language"]
force-sort-within-sections = true

