[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "continuous_sign_language_cnn_transformer"
version = "0.0.1"
description = "\u30a8\u30f3\u30b3\u30fc\u30c0\u30fc\u306b1DCNN\u3092\u7528\u3044\u3066\u3001\u30c7\u30b3\u30fc\u30c0\u30fc\u306bTransforemeDecoder\u3092\u7528\u3044\u305f\u9023\u7d9a\u624b\u8a71\u8a8d"
authors = [
  { name = "Jun" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["continuous_sign_language_cnn_transformer"]
force_sort_within_sections = true
